...
            android:layout_height="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--foodstuff name-->
        <TextView
            android:id="@+id/foodstuff_name_text_view"
            style="@style/RobotoMonoHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4.5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/foodstuff_name"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            app:layout_constraintTop_toBottomOf="@+id/row_fake_top_1"
            android:layout_marginTop="8dp"
            android:nextFocusDown="@+id/protein_value"
            tools:text="Чечевица" />

        <View
            android:id="@+id/row_fake_top_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
            style="@style/RobotoMonoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top_2"
            app:layout_constraintWidth_percent="0.5"
            android:nextFocusDown="@+id/fats_value"
            custom:color_underline_filled="@color/colorProtein"
            custom:progress_max_value="100"
            custom:digits_after_decimal_dot="1"
            android:maxLength="30"
            tools:text="17" />

...
            style="@style/RobotoMonoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/protein_value"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top_2"
            app:layout_constraintWidth_percent="0.5"
            android:nextFocusDown="@+id/carbs_value"
            custom:color_underline_filled="@color/colorFats"
            custom:progress_max_value="100"
            custom:digits_after_decimal_dot="1"
            android:maxLength="30"
            tools:text="2" />

...
            style="@style/RobotoMonoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top_3"
            app:layout_constraintWidth_percent="0.5"
            android:nextFocusDown="@+id/calories_value"
            custom:color_underline_filled="#FF5768E9"
            custom:progress_max_value="100"
            custom:digits_after_decimal_dot="1"
            android:maxLength="30"
            tools:text="68" />

...
            custom:background_bar_color="#EFF1F6"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/VioletButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginStart="9dp"
...
