<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/foodstuff_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:tag="calc_keyboard_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/new_card_background" >

    <!--лейаут нужный для задания маржина-->
    <!--коренной лейаут этой разметки очень нагло эксплуатируется диалогом
    как тому заблогарассудится, поэтому власти над ним мы имеем очень мало -
    зато мы имеем власть над всем контентом, и поэтому мы сделали второй
    "большой" лейаут с маржином, чтоб буковы отъехали от краёв-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/foodstuff_name_text_view"
            style="@style/MontserratHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:maxLines="3"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toStartOf="@+id/frame_layout_button_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Чечевица" />

        <FrameLayout
            android:id="@+id/frame_layout_button_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/frame_layout_button_edit"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector">

            <ImageView
                android:id="@+id/button_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete_black" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_button_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/button_edit"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_edit_black" />
        </FrameLayout>

        <include layout="@layout/button_close"
            android:id="@+id/button_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/nutrition_progress_with_values_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/foodstuff_name_text_view">
            <include
                android:id="@+id/nutrition_progress_with_values"
                layout="@layout/nutrition_progress_with_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <View
            android:id="@+id/row_fake_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values_parent" />

        <TextView
            android:id="@+id/weight_text_view"
            style="@style/RobotoMonoHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/weight_in_card" />

        <korablique.recipecalculator.ui.calckeyboard.CalcEditText
            android:id="@+id/weight_edit_text"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            android:layout_marginEnd="11.5dp"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top"
            android:maxLines="1"
            custom:min_value="0"
            custom:max_value="99999"
            custom:digits_after_decimal_dot="1"
            android:maxLength="30"
            tools:text="100" />

        <Button
            android:id="@+id/button2"
            style="@style/VioletLiningButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            android:text="@string/add_foodstuff"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/button1"
            style="@style/VioletButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            android:text="@string/add_foodstuff"
            android:layout_marginTop="8dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</LinearLayout>