...
        Белки - %2$.1f\n
        Жиры - %3$.1f\n
        Углеводы - %4$.1f\n
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
...
    <string name="undo">Отмена</string>
    <string name="foodstuff_deleted">Продукт удалён</string>
    <string name="work_with_recipe_canceled">Работа с рецептом прекращена</string>
    <string name="work_with_foodstuffs_canceled">Работа с продуктами прекращена</string>
    <string name="change_foodstuff">Изменить продукт</string>
    <string name="search_results">Результаты поиска \"%s\"</string>
    <string name="add_new_foodstuff">Добавить новый продукт</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="calorie_intake">Норма калорий:</string>
    <string name="set_current_weight">Изменить текущий вес</string>
    <string name="recommended_nutrition_ratio">Рекомендуемое БЖУ</string>
    <string name="how_it_is_calculated">Рассчитывается по формуле</string>
    <string name="last_measurements_date">Дата последних измерений</string>
...
